--- a/_mnemosyne/css/style.css
+++ b/_mnemosyne/css/style.css
@@ -1,22 +1,27 @@
-/* ---- @ Nicolas Bellet - 2022 ---- */
+/* ---- Archives photo ---- */
+/* ---- @ Nicolas Bellet - 2023 ---- */
 
 /* ---- GENERAL ---- */
 
+:root {
+  --couleur-accent: lightseagreen;
+}
+
 * { 
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 body {
   font-family: sans-serif;
 }
 
-h1, h3{
-    text-align: center;
-}
-
 h3, p{
   background-color: white;
+}
+
+h2 {
+  font-size: 20px;
+  text-align: center;
 }
 
 #list {
@@ -28,10 +33,57 @@ h3, p{
 
 /* ---- MENU ---- */
 
+#menu-top {
+  display: flex;
+  max-width: 1280px;
+  margin: 20px auto;
+}
+
+#menu-container {
+  margin-left: auto;
+  display: grid;
+  align-content: center;
+}
+
+.submenu {
+  display: none;
+  padding-left: 0;
+  margin: -10px 0 0 -140px;
+  padding-top: 20px;
+  width: fit-content;
+  min-height: 100px;
+  font-size: 14px;
+  font-style: italic;
+}
+
+li:hover .submenu {
+  display: flex;
+}
+
+@media screen and (max-width: 800px) {
+  #menu-top {
+    display: unset;
+  }
+  #menu-container {
+    margin-top: 40px;
+  }
+  #menu {
+    display: grid !important;
+    margin: 0 auto;
+  }
+  li:hover .submenu {
+    display: block;
+  }
+  .submenu {
+    padding-left: 110px;
+    padding-top: 0;
+    margin: 0;
+  }
+}
+
 #menu {
   margin-left: auto ;
-  margin-right: auto;
-  padding: 10px 0 10px ;
+  padding: 16px 0 10px ;
   list-style: none ;
   display: flex;
 }
@@ -40,12 +92,14 @@ h3, p{
   color: black;
   font-weight: bold;
   float: left ;
-  width: 100px ;
+  width: 110px ;
   text-decoration: none;
   text-align: center;
   transition: 0.3s;
   height: 30px;
   line-height: 30px;
+  position: relative;
+  z-index: 1000;
 }
 
 #menu li{
@@ -54,18 +108,41 @@ h3, p{
 }
 
 #menu li a:hover, .current{
-  background-color: lightseagreen;
+  background-color: var(--couleur-accent);
   text-decoration: none;
   color:white !important;
 }
 
+ul{
+  list-style: none;
+}
+
 .topline{
-  border-top: 12px solid lightseagreen;
+  border-top: 12px solid var(--couleur-accent);
   border-bottom: 0px;
-  width: 40%;
-  top: -35px;
+  width: 100%;
+  top: -40px;
   z-index: -99;
   position: relative;
+  margin: 0 auto;
+}
+
+#menu-top img {
+  margin: 20px;
+  background: var(--couleur-accent);
+}
+
+@media screen and (max-width: 800px) {
+  .topline {
+    width: 60%;
+  }
+  h1 {
+    text-align: center;
+  }
+  #menu-top img {
+    position: absolute;
+    margin: 0;
+  }
 }
 
 /* ---- BOUTONS ---- */
@@ -75,8 +152,8 @@ h3, p{
   padding: 0.5em 1.0em;
   margin-bottom: 10px;
   background: white;
-  border: 2px solid lightseagreen;
-  color: lightseagreen;
+  border: 2px solid var(--couleur-accent);
+  color: var(--couleur-accent);
   font-family: sans-serif;
   font-size: 13px;
   font-weight: bold;
@@ -86,14 +163,14 @@ h3, p{
 }
 
 .button:hover {
-  background-color: lightseagreen;
+  background-color: var(--couleur-accent);
   color: white;
   border-color: white;
 }
 
 .button:active,
 .button.is-checked {
-  background-color: lightseagreen;
+  background-color: var(--couleur-accent);
 }
 
 .button.is-checked {
@@ -113,7 +190,7 @@ h3, p{
 }
 
 .button-group {
-  margin: 0 auto;
+  margin: 20px auto;
   width: fit-content;
 }
 
@@ -124,22 +201,10 @@ h3, p{
   margin-right: 5px;
 }
 
-/* clear fix */
+/* ---- GRID ---- */
 
 .grid {
   margin: 0 auto;
-}
-
-.grid:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-
-/* ---- GRID ---- */
-
-tbody {
-  display: flex;
 }
 
 @media screen and (max-width: 600px) {
@@ -153,8 +218,8 @@ tbody {
   float: left;
   width: 300px;
   height: 150px;
-  margin: 10px;
   padding: 10px;
+  margin: 10px;
   background: #888;
   color: #000;
   background-size: 100%; 
@@ -196,7 +261,7 @@ tbody {
 }
 
 .element-item:hover {
-  box-shadow: 7px 7px lightseagreen;
+  box-shadow: 7px 7px var(--couleur-accent);
   opacity: 60%;
   background-size: 110%;
 }
@@ -249,7 +314,6 @@ a.copyright:hover .titre {
 
 .tree li .male:hover {
   background-color:lightblue;
-  display: inline-block;
   width:fit-content;
   width: -moz-fit-content;
   width: -webkit-fit-content;
@@ -258,7 +322,6 @@ a.copyright:hover .titre {
 
 .tree li .female:hover {
   background-color:lightpink;
-  display: inline-block;
   width:fit-content;
   width: -moz-fit-content;
   width: -webkit-fit-content;
@@ -268,8 +331,155 @@ a.copyright:hover .titre {
 .dates {
   color:gray;
   font-size: 10px;
+  margin-left: 0.5em;
 }
 
-button{
+button, label {
   font-size:12px;
+}
+
+/* ---- CARTE GOOGLE ---- */
+
+#map {
+  height: 70vh;
+  width: 80vw;
+  margin: 0 auto;
+  padding: 0px
+}
+
+#map a {
+  text-decoration: none;
+}
+
+hr {
+  border: none;
+  margin: 2px
+}
+
+#text-infowindow li:first-child span {
+  font-size: 16px;
+  font-weight: bold;
+  display: block;
+  list-style: none;
+  margin-bottom: 1em;
+  white-space: pre;
+}
+
+#text-infowindow li {
+  list-style: none;
+}
+
+#text-infowindow li span {
+  display: none;
+}
+
+/* ---- PARSING ---- */
+
+#images-parse {
+  width: fit-content;
+  margin: 0 auto;
+}
+
+#images-parse h1 {
+  text-align: center;
+}
+
+/* ---- VIDEOS ---- */
+
+
+#list-videos {
+  width: fit-content;
+  margin: 0 auto;
+}
+
+#my-video {
+  width: 100%;
+  min-height: 400px;
+}
+
+.video-js .vjs-big-play-button {
+  top: 43% !important;
+  left: 42% !important;
+}
+
+/* ---- AUDIO ---- */
+
+
+#wrapper { 
+  width: 500px; 
+  margin: 40px auto; 
+}
+
+ol { 
+  padding: 0px; 
+  margin: 0px; 
+  list-style: decimal-leading-zero inside; 
+  color: #ccc; 
+  width: 100%; 
+  border-top: 1px solid #ccc; 
+  font-size: 0.8em; 
+}
+
+ol li { 
+  position: relative; 
+  margin: 0px; 
+  padding: 9px 2px 10px; 
+  border-bottom: 1px solid #ccc; 
+  cursor: pointer; 
+}
+
+ol li a { 
+  display: block; 
+  text-indent: -3.3ex; 
+  padding: 0px 0px 0px 20px; 
+}
+
+li.playing { 
+  color: #aaa; 
+  text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.3); 
+}
+
+li.playing a { 
+  color: #000; 
+}
+
+li.playing:before { 
+  content: '♬'; 
+  width: 14px; 
+  height: 14px; 
+  padding: 3px; 
+  line-height: 14px; 
+  margin: 0px; 
+  position: absolute; 
+  left: -24px; 
+  top: 9px; 
+  color: #000; 
+  font-size: 13px; 
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.2); 
+}
+
+@media screen and (max-width: 600px) {
+    #wrapper { 
+      width: 400px; 
+    }
+}
+
+.audiojs {
+  width: 100% !important;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow : none !important;
+  -o-box-shadow: none !important;
+  box-shadow: none !important;
+}
+
+.audiojs .scrubber {
+  width: 240px !important;
+}
+
+.audiojs .play-pause, .audiojs .time {
+  border: none !important;
+}
+
+.audiojs .progress {
+  background: var(--couleur-accent) !important;
 }
